--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar>
     <ion-title>login</ion-title>
   </ion-toolbar>
+  <script src="https://accounts.google.com/gsi/client" async></script>
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -10,4 +11,24 @@
       <ion-title size="large">login</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-button (click)="signInWithFB()">
+    Iniciar sesión con Facebook
+  </ion-button>
+
+  <ion-button>
+    <asl-google-signin-button type='standard' size='small' theme="filled_blue" *ngIf="!socialUser"></asl-google-signin-button>
+  </ion-button>
+
+  <ion-button (click)="signOut()">
+    Sign Out
+  </ion-button>
+
+  <div *ngIf="socialUser">
+    <img src="{{ socialUser.photoUrl }}">
+    <div>
+      <h2>{{ socialUser.name }}</h2>
+      <h2>{{ socialUser.email }}</h2>
+    </div>
+  </div>
 </ion-content>
