--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,50 +1,62 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title style="text-align: center; background: none">MarkMelo</ion-title>
   </ion-toolbar>
   <script src="https://accounts.google.com/gsi/client" async></script>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-text center>
+    <h1 class="ion-padding" style="text-align: center">Iniciar sesión</h1>
+  </ion-text>
 
-  <ion-content [fullscreen]="true">
-    <div class="login-container">
-      <ion-item>
-        <ion-label position="floating">Correo electrónico</ion-label>
-        <ion-input type="email"></ion-input>
-      </ion-item>
+  <form>
+    <div class="ion-padding">
+      <ion-card>
+        <ion-item>
+          <label for="email" class="ion-text-bold"></label>
+          <ion-input
+            type="email"
+            id="email"
+            placeholder="Ingresa tu correo electrónico"
+          ></ion-input>
+        </ion-item>
+        <ion-item>
+          <label for="password" class="ion-text-bold"></label>
+          <ion-input
+            type="password"
+            id="password"
+            placeholder="Ingresa tu contraseña"
+          ></ion-input>
+        </ion-item>
+      </ion-card>
 
-      <ion-item>
-        <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password"></ion-input>
-      </ion-item>
-
-      <div class="button-container">
-        <ion-button (click)="signInWithFB()" expand="full" color="primary">
-          Iniciar sesión con Facebook
-        </ion-button>
-
-        <ion-button *ngIf="!socialUser" expand="full" color="primary">
-          <asl-google-signin-button type='standard' size='small' theme="filled_blue"></asl-google-signin-button>
+      <div>
+        <a [routerLink]="['/reset-password']">¿Olvidaste tú contraseña?</a>
+        <p>¿No tienes cuenta? <a [routerLink]="['/singup']">Registrate</a></p>
+      </div>
+      <div class="button-container-login">
+        <ion-button color="primary" [routerLink]="['/home']"
+          >Iniciar sesión</ion-button
+        >
+        <ion-button (click)="signInWithFB()" class="social"
+          >Iniciar con Facebook</ion-button
+        >
+        <ion-button *ngIf="!socialUser" color="primary" class="google">
+          <asl-google-signin-button
+            type="standard"
+            size="small"
+            theme="filled_blue"
+          ></asl-google-signin-button>
         </ion-button>
       </div>
-
-      <ion-button (click)="signOut()" expand="full" color="danger">
-        Cerrar sesión
-      </ion-button>
-
       <div class="user-info" *ngIf="socialUser">
-        <img src="{{ socialUser.photoUrl }}" alt="Foto de perfil del usuario">
+        <img src="{{ socialUser.photoUrl }}" alt="Foto de perfil del usuario" />
         <div>
           <h2>{{ socialUser.name }}</h2>
           <h2>{{ socialUser.email }}</h2>
         </div>
       </div>
     </div>
-  </ion-content>
+  </form>
 </ion-content>
