--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,33 +10,41 @@
     <h1 class="ion-padding" style="text-align: center">Iniciar sesión</h1>
   </ion-text>
 
-  <form>
-    <div class="ion-padding">
-      <ion-card>
-        <ion-item>
-          <label for="email" class="ion-text-bold"></label>
-          <ion-input
-            type="email"
-            id="email"
-            placeholder="Ingresa tu correo electrónico"
-          ></ion-input>
-        </ion-item>
-        <ion-item>
-          <label for="password" class="ion-text-bold"></label>
-          <ion-input
-            type="password"
-            id="password"
-            placeholder="Ingresa tu contraseña"
-          ></ion-input>
-        </ion-item>
-      </ion-card>
-
+<form (submit)="login($event)">
+  <div class="ion-padding">
+    <ion-card>
+      <ion-item>
+        <label for="email" class="ion-text-bold"></label>
+        <ion-input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Ingresa tu correo electrónico"
+          [(ngModel)]="email" 
+        ></ion-input>
+      </ion-item>
+      <ion-item>
+        <label for="password" class="ion-text-bold"></label>
+        <ion-input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Ingresa tu contraseña"
+          [(ngModel)]="password" 
+        ></ion-input>
+      </ion-item>
+      <button>login</button>
+    </ion-card>
+  </div>
+</form>
+    
+<div class="ion-padding"> 
       <div>
         <a [routerLink]="['/reset-password']">¿Olvidaste tú contraseña?</a>
         <p>¿No tienes cuenta? <a [routerLink]="['/singup']">Registrate</a></p>
       </div>
       <div class="button-container-login">
-        <ion-button color="primary" [routerLink]="['/home']"
+        <ion-button  color="primary" [routerLink]="['/login']"
           >Iniciar sesión</ion-button
         >
         <ion-button (click)="signInWithFB()" class="social"
@@ -58,5 +66,4 @@
         </div>
       </div>
     </div>
-  </form>
 </ion-content>
