--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -1,13 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>users</ion-title>
+    <ion-title>Users</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">users</ion-title>
+      <ion-title size="large">Users</ion-title>
+      <ion-button (click)="logout()" color="primary" [routerLink]="['/login']">
+        Sign Out
+      </ion-button>
     </ion-toolbar>
+
+    <pre>
+      <code>
+        {{userData | json}}
+      </code>
+    </pre>
   </ion-header>
 </ion-content>
