--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -1,22 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Users</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Users</ion-title>
-      <ion-button (click)="logout()" color="primary" [routerLink]="['/login']">
-        Sign Out
-      </ion-button>
-    </ion-toolbar>
+  <ion-text center>
+    <h1 class="ion-padding" style="text-align: center">Usuario</h1>
+  </ion-text>
 
-    <pre>
-      <code>
-        {{userData | json}}
-      </code>
-    </pre>
-  </ion-header>
+  <ion-card>
+    <ion-card-header> User Information </ion-card-header>
+    <ion-card-content>
+      <div *ngIf="userData">
+        <p>Email: {{ userData.results[0].email_user}}</p>
+        <!-- Agrega más campos según la estructura de userData -->
+      </div>
+      <div *ngIf="!userData">
+        <p>Loading user data...</p>
+      </div>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-button (click)="logout()" color="primary" [routerLink]="['/login']"
+    >Cerrar sesión</ion-button
+  >
 </ion-content>
