Creacion de pages para cada rolAdministrativo y su implementcion de seguridad para evitar el acceso no autorizado segun el rol del usuario

--- a/src/app/pages/allUsers/user/user.page.html
+++ b/src/app/pages/allUsers/user/user.page.html
@@ -15,8 +15,7 @@
       </div>
     </ion-card-content>
   </ion-card>
-
-  <ion-button (click)="logout()" color="primary" [routerLink]="['/login']"
+  <ion-button (click)="logout()" color="primary" 
     >Cerrar sesión</ion-button
   >
 </ion-content>
