--- a/src/app/pages/login/singup/singup.page.html
+++ b/src/app/pages/login/singup/singup.page.html
@@ -7,52 +7,39 @@
     <h1 class="ion-padding" style="text-align: center">Crear Cuenta</h1>
   </ion-text>
 
-  <form>
+  <form [formGroup]="registerForm">
     <div class="ion-padding">
       <ion-card>
         <ion-item>
-          <label for="nombre" class="ion-text-bold"></label>
+          <label for="username" class="ion-text-bold"></label>
           <ion-input
+          formControlName="username_user"
             type="text"
-            id="nombre"
+            id="username"
             placeholder="Ingresa tu nombre"
-          ></ion-input>
-        </ion-item>
-        <ion-item>
-          <label for="apellido" class="ion-text-bold"></label>
-          <ion-input
-            type="text"
-            id="apellido"
-            placeholder="Ingresa tu apellido"
           ></ion-input>
         </ion-item>
         <ion-item>
           <label for="email" class="ion-text-bold"></label>
           <ion-input
+            formControlName="email_user"
             type="email"
             id="email"
-            placeholder="Correo electrónico"
+            placeholder="Ingresa tu correo electrónico"
           ></ion-input>
         </ion-item>
         <ion-item>
           <label for="password" class="ion-text-bold"></label>
           <ion-input
+            formControlName="password_user"
             type="password"
             id="password"
-            placeholder="Contraseña"
-          ></ion-input>
-        </ion-item>
-        <ion-item>
-          <label for="confirmpassword" class="ion-text-bold"></label>
-          <ion-input
-            type="password"
-            id="password"
-            placeholder="Confirmar contraseña"
+            placeholder="Ingresa tu contraseña"
           ></ion-input>
         </ion-item>
       </ion-card>
       <div class="button-container-login" flex-direction="column">
-        <ion-button color="primary" [routerLink]="['/login']"
+        <ion-button (click)="onRegister()" color="primary" [routerLink]="['/login']"
           >crear cuenta</ion-button>
       </div>  
     </div>
