--- a/src/app/pages/allUsers/user/user.page.html
+++ b/src/app/pages/allUsers/user/user.page.html
@@ -15,7 +15,53 @@
       </div>
     </ion-card-content>
   </ion-card>
-  <ion-button (click)="logout()" color="primary" 
-    >Cerrar sesión</ion-button
+  <ion-button (click)="logout()" color="primary">Cerrar sesión</ion-button>
+
+  <ion-item>
+    <ion-label>Categoría principal</ion-label>
+    <ion-select (ionChange)="selectCategory($event)" aria-label="Categoría">
+      <ion-select-option
+        *ngFor="let mainCategory of getMainCategory()"
+        [value]="mainCategory.id"
+      >
+        {{ mainCategory.nombre}}
+      </ion-select-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-item *ngIf="getSubCategory(selectedCategoryId).length > 0">
+    <ion-label>sub principal</ion-label>
+    <ion-select (ionChange)="selectSubCategory($event)">
+      <ion-select-option
+        *ngFor="let subCategory of getSubCategory(selectedCategoryId)"
+        [value]="subCategory.id"
+      >
+        {{ subCategory.nombre}}
+      </ion-select-option>
+    </ion-select>
+  </ion-item>
+  <ion-button (click)="showProducts()" color="primary">Consultar</ion-button>
+
+  <ion-col
+    *ngFor="let p of productos"
+    size-lg="4"
+    size-md="6"
+    size-sm="12"
+    size="12"
   >
+    <ion-card class="episode-card">
+      <ion-avatar>
+        <img
+          src="https://www.w3schools.com/howto/img_avatar.png"
+          alt="avatar"
+        />
+      </ion-avatar>
+      <ion-card-content class="space-between">
+        <ion-card-title>{{ p.nombre }}</ion-card-title>
+        <div [innerHTML]="p.resumen"></div>
+        <div [innerHTML]="p.descripcionProducto"></div>
+        <p>{{ p.precio1 }}</p>
+      </ion-card-content>
+    </ion-card>
+  </ion-col>
 </ion-content>
