--- a/src/app/pages/login/singup/singup.page.html
+++ b/src/app/pages/login/singup/singup.page.html
@@ -7,20 +7,22 @@
     <h1 class="ion-padding" style="text-align: center">Crear Cuenta</h1>
   </ion-text>
 
-  <form [formGroup]="registerForm">
+  <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
     <div class="ion-padding">
       <ion-card>
         <ion-item>
-          <label for="username" class="ion-text-bold"></label>
           <ion-input
-          formControlName="username_user"
+            formControlName="username_user"
             type="text"
             id="username"
             placeholder="Ingresa tu nombre"
           ></ion-input>
         </ion-item>
+        <div *ngIf="registerForm.get('username_user')?.hasError('required') && registerForm.get('username_user')?.touched">
+          <ion-text color="danger">El nombre de usuario es requerido.</ion-text>
+        </div>
+
         <ion-item>
-          <label for="email" class="ion-text-bold"></label>
           <ion-input
             formControlName="email_user"
             type="email"
@@ -28,8 +30,14 @@
             placeholder="Ingresa tu correo electrónico"
           ></ion-input>
         </ion-item>
+        <div *ngIf="registerForm.get('email_user')?.hasError('required') && registerForm.get('email_user')?.touched">
+          <ion-text color="danger">El correo electrónico es requerido.</ion-text>
+        </div>
+        <div *ngIf="registerForm.get('email_user')?.hasError('email') && registerForm.get('email_user')?.touched">
+          <ion-text color="danger">Ingresa un correo electrónico válido.</ion-text>
+        </div>
+
         <ion-item>
-          <label for="password" class="ion-text-bold"></label>
           <ion-input
             formControlName="password_user"
             type="password"
@@ -37,11 +45,27 @@
             placeholder="Ingresa tu contraseña"
           ></ion-input>
         </ion-item>
+        <div *ngIf="registerForm.get('password_user')?.hasError('required') && registerForm.get('password_user')?.touched">
+          <ion-text color="danger">La contraseña es requerida.</ion-text>
+        </div>
+        <div *ngIf="registerForm.get('password_user')?.hasError('minlength') && registerForm.get('password_user')?.touched">
+          <ion-text color="danger">La contraseña debe tener al menos 8 caracteres.</ion-text>
+        </div>
+        <div *ngIf="registerForm.get('password_user')?.hasError('uppercase') && registerForm.get('password_user')?.touched">
+          <ion-text color="danger">La contraseña debe contener al menos una letra mayúscula.</ion-text>
+        </div>
+        <div *ngIf="registerForm.get('password_user')?.hasError('specialCharacter') && registerForm.get('password_user')?.touched">
+          <ion-text color="danger">La contraseña debe contener al menos un carácter especial (por ejemplo, !#$%^&.*).</ion-text>
+        </div>
+        <div *ngIf="registerForm.get('password_user')?.hasError('number') && registerForm.get('password_user')?.touched">
+          <ion-text color="danger">La contraseña debe contener al menos un numero</ion-text>
+        </div>
       </ion-card>
+
       <div class="button-container-login" flex-direction="column">
         <ion-button (click)="onRegister()" color="primary" [routerLink]="['/login']"
           >crear cuenta</ion-button>
-      </div>  
+      </div>
     </div>
   </form>
 </ion-content>
