--- a/src/app/pages/login/singup/singup.page.html
+++ b/src/app/pages/login/singup/singup.page.html
@@ -63,9 +63,14 @@
       </ion-card>
 
       <div class="button-container-login" flex-direction="column">
-        <ion-button (click)="onRegister()" color="primary" [routerLink]="['/login']"
+        <ion-button [disabled]="!registerForm.valid" (click)="onRegister()" color="primary" [routerLink]="['/login']"
           >crear cuenta</ion-button>
       </div>
+      <div class="button-container-login" flex-direction="column">
+        <ion-button color="primary" [routerLink]="['/login']"
+          >Back</ion-button>
+      </div>
+
     </div>
   </form>
 </ion-content>
