--- a/src/app/pages/login/singup/singup.page.html
+++ b/src/app/pages/login/singup/singup.page.html
@@ -15,7 +15,7 @@
             formControlName="username_user"
             type="text"
             id="username"
-            placeholder="Ingresa tu nombre"
+            placeholder="Ingrese su nombre"
           ></ion-input>
         </ion-item>
         <div *ngIf="registerForm.get('username_user')?.hasError('required') && registerForm.get('username_user')?.touched">
@@ -27,7 +27,7 @@
             formControlName="email_user"
             type="email"
             id="email"
-            placeholder="Ingresa tu correo electrónico"
+            placeholder="Ingrese su correo electrónico"
           ></ion-input>
         </ion-item>
         <div *ngIf="registerForm.get('email_user')?.hasError('required') && registerForm.get('email_user')?.touched">
@@ -39,10 +39,24 @@
 
         <ion-item>
           <ion-input
+            formControlName ="phone_user" 
+            type="tel"
+            id="phone_user" 
+            placeholder="Ingrese su número de teléfono"
+          ></ion-input>
+        </ion-item>
+        <div *ngIf="registerForm.get('phone_user')?.hasError('required') && registerForm.get('phone_user')?.touched">
+          <ion-text color="danger">El número de teléfono es requerido.</ion-text>
+        </div>
+        <div *ngIf="registerForm.get('phone_user')?.hasError('pattern') && registerForm.get('phone_user')?.touched">
+          <ion-text color="danger">Ingresa un número de teléfono válido , debe colocar el codigo de pais al principio (+57) .</ion-text>
+        </div>
+        <ion-item>
+          <ion-input
             formControlName="password_user"
             type="password"
             id="password"
-            placeholder="Ingresa tu contraseña"
+            placeholder="Ingrese su contraseña"
           ></ion-input>
         </ion-item>
         <div *ngIf="registerForm.get('password_user')?.hasError('required') && registerForm.get('password_user')?.touched">
@@ -59,6 +73,18 @@
         </div>
         <div *ngIf="registerForm.get('password_user')?.hasError('number') && registerForm.get('password_user')?.touched">
           <ion-text color="danger">La contraseña debe contener al menos un numero</ion-text>
+        </div>
+
+        <ion-item>
+          <ion-input
+            formControlName="confirm_password"
+            type="password"
+            id="confirm_password"
+            placeholder="Confirme su contraseña"
+          ></ion-input>
+        </ion-item>
+        <div *ngIf="registerForm.get('confirm_password')?.hasError('mismatch') && registerForm.get('confirm_password')?.touched">
+          <ion-text color="danger">Las contraseñas no coinciden.</ion-text>
         </div>
       </ion-card>
 
