Creacion de interfaz para  los usuarios y las categorias de productos V1

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -52,7 +52,7 @@
         <ion-button (click)="signInWithFB()" class="social"
           >Iniciar con Facebook</ion-button
         >
-        <ion-button *ngIf="!socialUser" color="primary" class="google">
+        <ion-button>
           <asl-google-signin-button
             type="standard"
             size="small"
