--- a/src/app/pages/allUsers/user/user.page.html
+++ b/src/app/pages/allUsers/user/user.page.html
@@ -31,34 +31,34 @@
       </div>
     </ion-card-content>
   </ion-card>
-  
+
+  <ion-button color="primary" [routerLink]="['/vista-productos']"
+    >Ver producto</ion-button
+  >
+
   <ion-item>
-    <ion-label >Todas las categorias</ion-label>
+    <ion-label>Todas las Categories</ion-label>
     <ion-select aria-label="Categoría">
-      <ion-select-option
-      >
-      </ion-select-option>
+      <ion-select-option> </ion-select-option>
     </ion-select>
   </ion-item>
 
   <ion-col
-    *ngFor="let category of categoriesData"
+    *ngFor="let category of mainCategoryInformation"
     size-lg="4"
     size-md="6"
     size-sm="12"
     size="12"
   >
-      <img
-        alt="image_category"
-        src="assets/imgCategories/{{category.id}}{{category.name}}.webp"
-        style="display: block; margin: 0 auto; width: 200px; height: 150px"
-      />
+    <img
+      alt="image_category"
+      src="assets/imgCategories/{{category.id}}{{category.name}}.webp"
+      style="display: block; margin: 0 auto; width: 200px; height: 150px"
+    />
   </ion-col>
-  
+
   <div>
-    <ion-button>
-      More Categories
-    </ion-button>
+    <ion-button> More Categories </ion-button>
   </div>
 
   <ion-popover trigger="slide-menu" [dismissOnSelect]="true">
@@ -97,4 +97,3 @@
     </ng-template>
   </ion-popover>
 </ion-content>
-
