--- a/src/app/pages/allUsers/user/user.page.html
+++ b/src/app/pages/allUsers/user/user.page.html
@@ -85,7 +85,7 @@
     <ng-template>
       <ion-content>
         <ion-list>
-          <ion-item [button]="true" [detail]="false" (click)="prueba()"
+          <ion-item [button]="true" [detail]="false" (click)="prueba()" [routerLink]="['/editar-perfil']"
             >editar perfil</ion-item
           >
           <ion-item [button]="true" [detail]="false">configuracion</ion-item>
