--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -15,3 +15,9 @@ div .google{
   justify-content: center;
   align-items: center;
 }
+
+p {
+  font-size: 10px;
+  text-align: center;
+  margin-top: 1rem;
+}
