--- a/src/app/pages/allUsers/user/user.page.html
+++ b/src/app/pages/allUsers/user/user.page.html
@@ -27,8 +27,7 @@
   </ion-item>
 
   <ion-col *ngFor="let category of mainCategoryInformation" size-lg="4" size-md="6" size-sm="12" size="12">
-    <img alt="image_category" src="assets/imgCategories/{{category.id}}{{category.name}}.webp"
-      style="display: block; margin: 0 auto; width: 200px; height: 150px" />
+    <img alt="image_category" src="assets/imgCategories/{{category.id}}{{category.name}}.webp"/>
   </ion-col>
 
   <div>
