--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="Designer">
-    <span>Design By #LasDivinas</span>
+    <span>Design By ""</span>
   </div>
 
   <div class="Links">
