Revision general de proyecto

--- a/src/app/pages/allUsers/user/vista-productos/vista-productos.page.html
+++ b/src/app/pages/allUsers/user/vista-productos/vista-productos.page.html
@@ -16,7 +16,7 @@
       </ion-buttons>
     </div>
 
-    <img src="https://catalogospromocionales.com/{{product.imageUrl}}" />
+    <img src="https://catalogospromocionales.com{{product.imageUrl}}" />
     <ion-grid>
       <ion-row>
         <ion-col *ngFor="let p of product.imagenes">
