--- a/src/app/pages/allUsers/user/user.page.html
+++ b/src/app/pages/allUsers/user/user.page.html
@@ -17,23 +17,24 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button color="primary" [routerLink]="['/vista-productos']">Ver producto</ion-button>
+  <ion-button color="primary" [routerLink]="['/vista-productos']"
+    >Ver producto</ion-button
+  >
 
-  <ion-item>
-    <ion-label>Todas las Categories</ion-label>
-    <ion-select aria-label="Categoría">
-      <ion-select-option> </ion-select-option>
-    </ion-select>
-  </ion-item>
-
-  <ion-col *ngFor="let category of mainCategoryInformation" size-lg="4" size-md="6" size-sm="12" size="12">
-    <img alt="image_category" src="assets/imgCategories/{{category.id}}{{category.name}}.webp"
-      style="display: block; margin: 0 auto; width: 200px; height: 150px" />
+  <ion-col
+    *ngFor="let category of mainCategoryInformation"
+    size-lg="4"
+    size-md="6"
+    size-sm="12"
+    size="12"
+  >
+    <img
+      alt="image_category"
+      src="assets/imgCategories/{{category.id}}{{category.name}}.webp"
+      style="display: block; margin: 0 auto; width: 200px; height: 150px"
+    />
   </ion-col>
 
-  <div>
-    <ion-button> More Categories </ion-button>
-  </div>
   <ion-footer>
     <ion-toolbar>
       <app-footer></app-footer>
