--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -36,7 +36,7 @@
   <div style="justify-content: center; align-items: center">
   </div>
   <div class="button-container-login">
-    <ion-button (click)="onLogin()" color="primary" [routerLink]="['/login']">Iniciar sesión</ion-button>
+    <ion-button (click)="onLogin()" color="primary" [routerLink]="['/home']">Iniciar sesión</ion-button>
     <ion-button (click)="signInWithFB()" class="social" color="primary">
       <ion-icon name="logo-facebook"></ion-icon>
       Inicia sesión con Facebook
