Idea inicial de la pagina Home

--- a/src/app/pages/footer/footer.component.scss
+++ b/src/app/pages/footer/footer.component.scss
@@ -1,7 +1,8 @@
 footer {
-    color: #ffffff;
+    color: black;
     padding: 20px;
     font-family: Arial, sans-serif;
+    background-color: var(--ion-color-primary);
 
     .Copyright {
         font-size: 14px;
