--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -11,13 +11,8 @@
       <ion-button id="slide-menu">
         <ion-icon slot="icon-only" name="menu-outline"></ion-icon>
       </ion-button>
-      <ion-button>
-        <ion-icon name="megaphone-outline"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon name="people-outline"></ion-icon>
-      </ion-button>
     </ion-buttons>
+    <ion-title>Markmelo</ion-title>
     <ion-buttons slot="end">
       <ion-button id="profile-menu">
             <div *ngIf="userData !== undefined">
@@ -42,15 +37,15 @@
       <ion-list>
         <ion-item [button]="true" [detail]="false" (click)="prueba()">
           <ion-icon name="time-outline"> </ion-icon>
-          <ion-label>&nbsp; Historial de pedidos</ion-label>
+          <ion-label>Categorias</ion-label>
         </ion-item>
         <ion-item [button]="true" [detail]="false">
           <ion-icon name="file-tray-full-outline"></ion-icon>
-          <ion-label>&nbsp; Estado de pedidos</ion-label>
+          <ion-label>Carrito</ion-label>
         </ion-item>
         <ion-item [button]="true" [detail]="false">
           <ion-icon name="document-attach-outline"></ion-icon>
-          <ion-label>&nbsp; Catalogo</ion-label>
+          <ion-label>Deseados</ion-label>
         </ion-item>
       </ion-list>
     </ion-content>
