--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -67,7 +67,7 @@
   --ion-color-dark-tint: #1a1a1a;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
